@@ -116,10 +116,9 @@
 </form>
 
 <form id="form_with_object_prototypes">
-  <input type="text" name="length"   value="foo" />
-  <input type="text" name="toString" value="bar" />
-  <input type="text" name="toString" value="baz" />
-  <input type="text" name="valueOf"  value="boo" />
+  <input type="text" name="length"   />
+  <input type="text" name="toString" />
+  <input type="text" name="valueOf"  />
 </form>
 
 <!-- tabindexed forms -->
